# nix-devshells

./: README.md  flake.nix
src/: givenv.sh
src/templates/agda/: .gitignore  flake.nix
src/templates/c/: .gitignore  flake.nix
src/templates/c++/: .gitignore  flake.nix
src/templates/cpp/: flake.nix
src/templates/django/: flake.nix
src/templates/dotnet/: flake.nix
src/templates/empty/: flake.nix
src/templates/haskell/: flake.nix  project.cabal
src/templates/ocaml/: flake.nix
src/templates/python/: flake.nix
src/templates/qml/: flake.nix
src/templates/r/: flake.nix
src/templates/rust/: flake.nix
src/templates/wasm/: flake.nix
src/templates/zig/: flake.nix
