cabal-version: 3.0
name:          TODO
version:       0.1.0.0

-- license:       BSD-3-Clause
-- license-file:  LICENSE

author:        TODO
maintainer:    TODO@TODO.com
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:

  -- other-modules:
  -- other-extensions:

  build-depends:    base
  hs-source-dirs:   src
  default-language: Haskell2010
